<resources>
    <string name="app_name">Norwegian Ski Resort</string>
    <string name="prfofile_activity_title">Profile</string>
    <string name="prfofile_about_title">About Us</string>
    <string name="transportation">Transportation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="weatherAPIKey">07b07d9396202814a51e158f14cc8403</string>
    <string name="googleAPIKey">AIzaSyDYXBDx7YCbjQjtUSI8cFEbs2eBPjiiy-g</string>

    <!-- Navigation drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_resort_list">Resort</string>
    <string name="nav_nearby_resort">NearBy Resorts</string>
    <string name="nav_accesslift">Access Lift</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About US</string>
    <string name="action_logout">Logout</string>
    <string name="nav_transport">Transportation</string>
    <string name="nav_resort_registration">Add Resort</string>
    <string name="prompt_province">Select Province</string>


    <string-array name="activity_titles">
        <item>Home Dashbord</item>
        <item>Resort</item>
        <item>NearBy Resorts</item>
        <item>Resort</item>
        <item>Access Lift</item>
        <item>Transportation</item>
        <item>Settings</item>
        <item>About US</item>
    </string-array>

    <string-array name="norway_province_list">
        <item>Select province</item>
        <item>Ostfold</item>
        <item>Akershus</item>
        <item>Oslo</item>
        <item>Hedmark</item>
        <item>Oppland</item>
        <item>Buskerud</item>
        <item>Vestfold</item>
        <item>Telemark</item>
        <item>Aust-Agder</item>
        <item>Vest-Agder</item>
        <item>Rogaland</item>
        <item>Hordaland</item>
        <item>Sogn og Fjordane</item>
        <item>Møre og Romsdal</item>
        <item>Nordland</item>
        <item>Troms</item>
        <item>Finnmark</item>
        <item>Trøndelag</item>
    </string-array>

    <array name="activity_titles2">

        <item>abc</item>
    </array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_resort_registration">ResortRegistration</string>


    <string name="message_while_calling_api">Loading...</string>
    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_bad_response">Bad Response</string>
    <string name="msg_un_auth_access">UnAuthorised Access</string>
    <string name="msg_bad_inputs">Bad Inputs</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified resort is not found.</string>
    <string name="msg_zero_results">Zero results, address not found</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>


    <!-- Strings related to Temp Units -->

    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>

    <!-- Strings related to Header/Label in Weather Activity -->
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <!-- Strings related to Weather icon -->
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <!-- Strings related to Wind Direction -->
    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>

    <!-- Setting related values -->

    <string name="pref_header_apikeys">API Keys</string>
    <string name="pref_header_unit">Units</string>

    <string name="pref_title_google_apikey">Google API Key</string>
    <string name="pref_title_weather_apikey">Weather API Key</string>
    <string name="pref_summary_google_apikey">Set Google API keys</string>
    <string name="pref_summary_weather_apikey">Set Weather API keys </string>

    <string name="pref_title_temp_unit">Temperature Units</string>
    <string name="pref_summary_temp_unit">°C</string>

    <string name="pref_key_google_api">pref_key_google_api</string>
    <string name="pref_key_weather_api">pref_key_weather_api</string>
    <string name="pref_key_temp_unit">pref_key_temp_unit</string>

    <string name="pref_app_version">1.0</string>
    <string name="pref_app_version_title">App Version</string>
    <string name="title_activity_maps_wear">MapsWearActivity</string>
    <string name="intro_text">Long click to exit the map.</string>

    <string name="pref_key_map_api_search_radius">pref_key_map_api_search_radius</string>


    <!-- map  related values -->
    <string name="title_activity_near_by_resort">Nearby ski resorts</string>
    <string name="title_activity_maps">NearBy Resort Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get List</string>
    <string name="pick_place">Choose Resort</string>


</resources>
