<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_resort_list"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/nav_resort_list" />
        <item
            android:id="@+id/nav_nearby_resort"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/nav_nearby_resort" />


        <item
            android:id="@+id/nav_accesslift"
            android:icon="@drawable/ic_nfc_black_24dp"
            android:title="@string/nav_accesslift" />

        <item
            android:id="@+id/nav_transportation"
            android:icon="@drawable/ic_transport"
            android:title="@string/nav_transport" />

    </group>

    <item android:title="Others">

        <menu>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings"/>

            <item android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us"/>
        </menu>

    </item>



</menu>
